[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'molecular_simulations'
version = '0.4.2'
authors = [
  { name='Matt Sinclair', email='msinclair@anl.gov' },
]
description = '''
A small package for building molecular systems using the AMBER \
force field and deploying OpenMM simulations on HPC clusters using Parsl.
'''
readme = 'README.md'
requires-python = '>= 3.10'
classifiers = [
    'Programming Language :: Python :: 3',
]
license = 'MIT'
license-files = ['LICEN[CS]E*']
dependencies = [
    'black-pdbfixer',
    'MDAnalysis>=2.7',
    'mdtraj',
    'natsort',
    'numba',
    'openmm>=8.0',
    'parmed',
    'parsl>=2024.1.29',
    'polars',
    'pydantic',
    'pyyaml',
    'rust-simulation-tools',
    'scikit-learn',
    'seaborn'
]

[project.urls]
Homepage = 'https://github.com/msinclair-py/molecular-dynamics'
Issues = 'https://github.com/msinclair-py/molecular-dynamics/issues'

[project.optional-dependencies]
ligand = [
    'openbabel',
    'rdkit'
]
docutils = [
    'sphinx',
    'sphinx-rtd-theme',
    'sphinx-wagtail-theme',
    'docutils'
]
dev = [
    'pytest>=7.0',
    'pytest-cov>=4.0',
    'numpy>=1.22',
    'ruff>=0.11',
    'ty>=0.0.1a7',
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ['src/molecular_simulations']

[tool.pytest.ini_options]
addopts = '-q --maxfail=1'
filterwarnings = [
    'ignore::DeprecationWarning:importlib._bootstrap',
]
testpaths = ['tests']
markers = [
    'slow: potentially long-running test',
    'requires_openmm: needs OpenMM runtime',
    'requires_amber: needs AmberTools/tleap',
    'requires_rdkit: needs RDKit installation',
    'integration: end-to-end integration test',
    'unit: isolated unit test',
]

[tool.ruff]
target-version = 'py310'
line-length = 88
src = ['src', 'tests']

[tool.ruff.lint]
select = [
    'E',      # pycodestyle errors
    'W',      # pycodestyle warnings
    'F',      # pyflakes
    'I',      # isort
    'N',      # pep8-naming
    'UP',     # pyupgrade
    'B',      # flake8-bugbear
    'SIM',    # flake8-simplify
    'TCH',    # flake8-type-checking
    'RUF',    # ruff-specific rules
]
ignore = [
    'E501',   # line too long (formatter handles this)
    'N802',   # lowercase function name (compute_at_pH, load_pLDDT, etc.)
    'N803',   # lowercase argument name (X for data matrices, etc.)
    'N806',   # lowercase variable in function (pH, X, etc.)
    'N813',   # ignore import alias case (MDAnalysis -> mda)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports in __init__ are intentional

[tool.ruff.lint.isort]
known-first-party = ['molecular_simulations']

[tool.ruff.format]
docstring-code-format = true

[tool.ty]
python-version = '3.10'
src = ['src']
